# Proiecte_Personale

./: README.md
Biblioteca_virtuala/: CMakeLists.txt  carti.txt  imprumuturi.txt
Biblioteca_virtuala/administrator/: Administrator.cpp  Administrator.h  Carte.cpp  Carte.h  main_administrator.cpp
Biblioteca_virtuala/backend/: httplib.h  server.cpp
Biblioteca_virtuala/fisiere/: GestionareFisiere.cpp  GestionareFisiere.h
Biblioteca_virtuala/frontend/: index.html  script.js
Biblioteca_virtuala/utilizator/: Cos.cpp  Cos.h  Data.cpp  Data.h  Imprumut.cpp  Imprumut.h  Utilizator.cpp  Utilizator.h  main_utilizator.cpp
Proiect_blog/: package.json
Proiect_blog/css/: about.css  chat.css  galerie.css  index.css  plimbatul.css
Proiect_blog/html/: about.html  chat.html  citit.html  formular.html  galerie.html  gaming.html  index.html  muzica.html  plimbatul.html  programare.html  sport.html
Proiect_blog/java/: chat.js  index.js  programare.js
demo/: db.sqlite3
demo/demo/: settings.py  urls.py
demo/myapp/: urls.py  views.py
demo/myapp/migrations/: 0001_initial.py
demo/myapp/static/: about.css  chat.css  chat.js  formular.css  formular.js  galerie.js  muzica.js  sport.css
demo/myapp/templates/: chat.html  citit.html  formular.html  galerie.html  gaming.html  index.html  muzica.html  plimbatul.html  programare.html  sport.html  todos.html
galerie_foto/: Proiect_versiune_finala.c  albume1.txt  poze1.txt
